--- a/ebookGenerator/resources/StaticFiles/xpp/scss/cgt.scss
+++ b/ebookGenerator/resources/StaticFiles/xpp/scss/cgt.scss
@@ -22,7 +22,8 @@
     sup &,
     thead>tr>td>&,
     tbody &,
-    .generated_case_tbl .int_ref_list>& {
+    .generated_case_tbl .int_ref_list>&,
+    .research_reference_block>& {
         display: inline;
     }
     .signature_group>.form_line &,
